--- a/src/assets/styles/mainStyles.scss
+++ b/src/assets/styles/mainStyles.scss
@@ -1,12 +1,11 @@
 @import "./variables/variables.scss";
-@import "./variables/style-schemes.scss";
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  font-family: 'Roboto', sans-serif;
+  // font-family: 'Roboto', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -24,7 +23,8 @@ body {
   align-items: center;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  max-height:fit-content;
   #app {
     .container {
       display: flex;
@@ -37,20 +37,20 @@ body {
         .sidebarTop{
           margin: 50px 0 20px;
         }
-        .sidebar-item {
-          padding: $space-medium $space-small;
-          border-radius: $space-small;
-          transition: $transition-slow;
-          cursor: pointer; 
   
-          .sidebar-item_el {
-            display: flex;
-            align-items: center;
+          a {
+            display: block;
             column-gap: $space-medium;
             text-decoration: none;
             font-weight: bold;
             font-size: $space-large;
-  
+            text-decoration: none;
+            padding: $space-medium $space-small;
+            border-radius: $space-small;
+            .sidebar-item {
+              border-radius: $space-small;
+              transition: $transition-slow;
+              cursor: pointer; 
             .icon {
               font-size: $space-larger;
               color: $syan;
@@ -63,7 +63,30 @@ body {
         height: $top-width;
         width: 100%;
         flex-grow: 1;
-        display: inline-block;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: $space-medium $space-larger;
+        position: relative;
+        margin-bottom: $space-larger;
+        column-gap: $space-larger;
+        .user{
+          width: 40px;
+          height: 40px;
+          border-radius: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: $transition-medium;
+          svg{
+            width: 28px;
+            height: 28px;
+          }
+          svg.userIcon{
+            fill: red;
+
+          }
+        }
       }
       .container-content{
         width: calc(100vw - $sidebar-width);
@@ -95,39 +118,159 @@ body {
     @include color-scheme;
     .sidebar{
       @include color-scheme-sidebar;
+      a{
       .sidebar-item{
         .sidebar-item_el{
           color: $text-color;
         }
-        &:hover {
-          background: $gradientSyanLight; 
-          .icon {
-          }
+      }
+      &:hover {
+        background: $gradientSyanLight; 
+        .icon {
         }
       }
     }
-    .topbar{
-      @include color-scheme-sidebar;
     }
+    .topbar{
+      // @include color-scheme-sidebar;
+      .user{
+        background: $gradientSyanLight;
+        &:hover{
+          background: $gradientSyan;
+        }
+      }
+    }
+    .hasBackground{
+      @include color-scheme-hover
+    }
+    td{
+      &:hover {
+        background: $gradientSyanLight; 
+      }
+    }
+    .usermodal-view{
+      @include color-scheme-sidebar;
+      .item{
+        &:hover{
+          background: $gradientSyanLight;
+        }
+      }
+    }
+    a{
+      color: $text-color
+    }
+
+    .help-view-item{
+      .question{
+          span{
+              background: $gradientSyanLight;
+          }
+      }
+      .answer{
+          span{
+              background: $gradientGrey;
+          }
+      }
+    } 
+
+    .day-plan{
+      .section-item{
+  
+      }
+      .todo-list{
+  
+      }
+      .additional-section{
+          .aphorism{
+              background: $gradientSyanLight;
+          }
+          .finance{
+  
+          }
+      }
+    }
+  
 }
   
 [data-theme="dark"] {
   @include color-scheme-dark;
   .sidebar{
     @include color-scheme-sidebar-dark;
+    a{
     .sidebar-item{
       .sidebar-item_el{
-        color: $text-color-dark;
+        color: $text-color;
       }
-      &:hover {
-        background: $gradientSyan; 
-        .icon {
-        }
+    }
+    &:hover{
+      background: $gradientSyan; 
+      .icon {
+      }
+    }
+    .router-link-active{
+      background: $gradientSyan; 
+      .icon {
       }
     }
   }
+  }
   .topbar{
+    // @include color-scheme-sidebar-dark;
+    .user{
+      background: $gradientSyan;
+      &:hover{
+        background: $gradientSyanLight;
+      }
+    }
+  }
+  .hasBackground{
+    @include color-scheme-hover-dark
+  }
+  td{
+    &:hover {
+      background: $gradientSyan; 
+    }
+  }
+  .usermodal-view{
     @include color-scheme-sidebar-dark;
+    .item{
+      &:hover{
+        background: $gradientSyan;
+      }
+    }
+  }
+  a{
+    color: $text-color-dark;
+  }
+
+  .help-view-item{
+    .question{
+        span{
+            background: $gradientSyan;
+        }
+    }
+    .answer{
+        span{
+            background: $gradientGrey;
+            color: $text-color;
+        }
+    }
+  }
+  .day-plan{
+    .section-item{
+
+    }
+    .todo-list{
+
+    }
+    .additional-section{
+        .aphorism{
+            background: $gradientSyan;
+        }
+        .finance{
+
+        }
+    }
   }
 }
   
