--- a/src/assets/styles/variables/variables.scss
+++ b/src/assets/styles/variables/variables.scss
@@ -12,27 +12,34 @@ $syan: rgb(15, 156, 161);
 $green: rgb(88, 214, 141);
 $red: rgb(231, 76, 60);
 $yellow: rgb(244, 208, 63);
+$greyLight: #ebebeb;
 $gradientSyan: linear-gradient(180deg, rgb(7, 9, 24) 10%, rgb(15, 156, 161) 100%, rgb(88, 214, 141) 40%);
 $gradientSyanLight: linear-gradient(0deg, rgba(18, 184, 134, 0.6) 5%, rgba(77, 171, 247, 0.28) 95%);;
+$gradientGrey: linear-gradient(180deg, rgba(139,139,156,1) 0%, rgba(198,198,207,1) 35%, rgba(196,227,233,1) 100%);
+$gradientYellow: linear-gradient(180deg, #ffcc89, #d8860b);
 $borderSyan: 1px solid rgb(15, 156, 161);
+$max-width-small: 700px;
 $max-width: 1152px;
 $max-width-large: 2000px;
 
 
 //space
-$sidebar-width: 250px;
+$sidebar-width: 280px;
 $top-width: 70px;
+$space-smallest: 4px;
 $space-small: 8px;
 $space-medium: 12px;
 $space-large: 16px;
 $space-larger: 24px;
-$space-largest: 36px;
+$space-largest: 48px;
 
 //font-size
 $font-small: 13px;
 $font-medium: 16px;
 $font-large: 20px;
 $font-larger: 24px;
+$font-largest: 36px;
+
 
 //transition
 $transition-fast: all ease-in-out 0.25s;
@@ -41,3 +48,44 @@ $transition-slow: all ease-in-out 1s;
 
 //border
 $border-syan: 1px solid $syan;
+
+
+
+//schemes
+@mixin color-scheme(){
+    background-color: $secondary-color;
+    color: $text-color
+}
+
+@mixin color-scheme-dark(){
+    background-color: $secondary-color-dark;
+    color: $text-color-dark
+}
+
+@mixin color-scheme-sidebar(){
+    background-color: $primary-color;
+    color: $text-color
+}
+
+@mixin color-scheme-sidebar-dark(){
+    background-color: $primary-color-dark;
+    color: $text-color-dark
+}
+
+@mixin text-scheme-medium(){
+    display: block;
+    text-align: center;
+    font-size: $font-large;
+    font-weight: bold;
+    padding-bottom: $space-small;
+}
+
+@mixin color-scheme-hover(){
+    background: $gradientSyanLight;
+    color: $text-color
+}
+
+@mixin color-scheme-hover-dark(){
+    background: $gradientSyan;
+    color: $text-color-dark
+}
