--- a/src/assets/styles/componentStyles.scss
+++ b/src/assets/styles/componentStyles.scss
@@ -1,5 +1,4 @@
 @import "./variables/variables.scss";
-@import "./variables/style-schemes.scss";
 
 .month-container{
     width: 100%;
@@ -34,7 +33,7 @@
 }
 
 .month-view{
-  max-width: $max-width;
+  max-width: $max-width-large;
   border-radius: $space-medium;
   .title{
     @include text-scheme-medium;
@@ -49,7 +48,7 @@
         color: $syan;
       }
       td{
-        height: 140px;
+        height: 150px;
         padding: $space-small;
         text-align:start;
         vertical-align: top;
@@ -60,24 +59,90 @@
   
 }
 
-[data-theme="light"]{
-    .hasBackground{
-        @include color-scheme-hover
+.theme-toggler{
+  display: flex;
+  align-items: center;
+  label{
+    width: 90px;
+    height: 40px;
+    border-radius: 40px;
+    position: relative;
+    display: block;
+    // background: #ebebeb;
+    background: $gradientSyan;
+    box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.4);
+    cursor: pointer;
+    transition: 0.3s;
+     svg{
+      position: absolute;
+      width: 24px;
+      height: 24px;
+      top: 8px;
+      z-index: 100;
+     }
+    svg.sun{
+      left: 58px;
+      fill: #7e7e7e;
+      transition: 0.3s;
     }
-    td{
-      &:hover {
-        background: $gradientSyanLight; 
+    svg.moon{
+      left: 8px;
+      fill: #fff;
+      transition: 0.3s;
+    }
+    &::after{
+      content: "";
+      width: 36px;
+      height: 36px;
+      position: absolute;
+      top: 3px;
+      left: 2px;
+      background: $gradientGrey;
+      border-radius: 36px;
+      box-shadow: 0px 5px 15px rgba(0,0,0,0.2);
+      transition: 0.3s;
+    }
+    &:active::after{
+      width: 52x;
+    }
+  }
+  input{
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    &:checked + label{
+      background: $greyLight;
+      &::after{
+        left: 88px;
+        transform: translateX(-100%);
+        background: $gradientYellow;
+      }
+      svg.moon{
+        fill: #7e7e7e;
+      }
+      svg.sun{
+        fill: #fff;
       }
     }
-}
-  
-[data-theme="dark"] {
-  .hasBackground{
-    @include color-scheme-hover-dark
-}
-td{
-  &:hover {
-    background: $gradientSyan; 
   }
 }
+
+.usermodal-view{
+  position: absolute;
+  top: calc($top-width + 2px); /* Position it below the topbar */
+  right: $space-larger;
+  width: fit-content;
+  background-color: white; /* Add your modal styles here */
+  z-index: 999; 
+  width: fit-content;
+  padding: $space-medium;
+  border-radius: $space-small;
+  .item{
+    padding: 4px $space-medium;
+    display: block;
+    border-radius: $space-smallest;
+  }
+  a{
+    text-decoration: none;
+  }
 }
