--- a/src/assets/styles/mainStyles.scss
+++ b/src/assets/styles/mainStyles.scss
@@ -23,40 +23,56 @@ body {
   align-items: center;
   place-items: center;
   min-width: 320px;
-  height: 100vh;
-  max-height:fit-content;
+  min-height: 100vh;
+  height: 100%;
   #app {
     .container {
       display: flex;
-      .sidebar {
-        width: $sidebar-width;
-        padding: $space-medium;
-        position: sticky;
-        top: 0;
-        left: 0;
-        .sidebarTop{
-          margin: 50px 0 20px;
-        }
-  
-          a {
-            display: block;
-            column-gap: $space-medium;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: $space-large;
-            text-decoration: none;
-            padding: $space-medium $space-small;
-            border-radius: $space-small;
-            .sidebar-item {
-              border-radius: $space-small;
-              transition: $transition-slow;
-              cursor: pointer; 
-            .icon {
-              font-size: $space-larger;
-              color: $syan;
-              margin-top: 3px;
-            }
+      .sidebar-container{
+        .menu-icon{
+          padding: $space-medium $space-small;
+          svg{
+            width: $space-largest;
+            height: $space-largest;
           }
+        }
+        .sidebar {
+          min-height: 100%;
+          min-height: 100vh;
+          width: $sidebar-width;
+          padding: $space-medium;
+          position: sticky;
+          top: 0;
+          left: 0;
+          .sidebarTop{
+            margin: $space-larger 0 $space-medium;
+          }
+          .menu{
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            a {
+              display: flex;
+              column-gap: $space-small;
+              align-items: center;
+              text-decoration: none;
+              font-weight: bold;
+              font-size: $space-large;
+              text-decoration: none;
+              padding: $space-small $space-medium;
+              border-radius: $space-small;
+              .sidebar-item {
+                border-radius: $space-small;
+                transition: $transition-slow;
+                cursor: pointer; 
+              }
+              .icon {
+                width: $space-larger;
+                height: $space-larger;
+                color: $syan;
+              }
+          }
+        }
         }
       }
       .topbar{
@@ -101,6 +117,9 @@ body {
         
       }
     }
+    .nextPrev-button{
+      padding: $space-small;
+    }
   } 
 }
 
@@ -112,6 +131,17 @@ body {
   h2{
       text-align: center;
   }
+  button{
+    background: transparent;
+    width: 35px;
+  }
+}
+
+.padding-small{
+  gap: $space-larger;
+  button{
+    margin-bottom: 8px;
+  }
 }
 
 [data-theme="light"]{
@@ -119,15 +149,8 @@ body {
     .sidebar{
       @include color-scheme-sidebar;
       a{
-      .sidebar-item{
-        .sidebar-item_el{
-          color: $text-color;
-        }
-      }
       &:hover {
         background: $gradientSyanLight; 
-        .icon {
-        }
       }
     }
     .router-link-active{
@@ -192,7 +215,25 @@ body {
           }
       }
     }
-  
+  .nextPrev-button{
+    background: $gradientSyanLight;
+  }
+
+  .animated-modal{
+    .box{
+      background-color: $syan;
+      &::before{
+          background: $gradientYellow;
+      }
+      &::after{
+          background: $gradientYellow;
+      }
+      .box-inset{
+        background: $secondary-color;
+        color: $text-color;
+      }
+    }
+  }
 }
   
 [data-theme="dark"] {
@@ -200,19 +241,19 @@ body {
   .sidebar{
     @include color-scheme-sidebar-dark;
     a{
-    .sidebar-item{
-      .sidebar-item_el{
-        color: $text-color;
-      }
-    }
     &:hover{
       background: $gradientSyan; 
-      .icon {
+      .icon:hover{
+        color: red;
+
       }
     }
   }
   .router-link-active{
     background: $gradientSyan; 
+    .icon{
+      color: $text-color-dark;
+    }
   }
   }
   .topbar{
@@ -271,6 +312,25 @@ body {
         .finance{
 
         }
+    }
+  }
+  .nextPrev-button{
+    background: $gradientSyan;
+  }
+
+  .animated-modal{
+    .box{
+      background-color: $primary-color;
+      &::before{
+          background: $gradientSyan;
+      }
+      &::after{
+          background: $gradientSyan;
+      }
+      .box-inset{
+        background: $secondary-color-dark;
+        color: $text-color-dark;
+      }
     }
   }
 }
