--- a/src/assets/styles/componentStyles.scss
+++ b/src/assets/styles/componentStyles.scss
@@ -28,8 +28,9 @@
         display: flex;
         justify-content: space-between;
         gap: $space-medium;
-        padding: $space-small $space-medium;
+        padding: $space-small;
     }
+
 }
 
 .month-view{
@@ -73,19 +74,19 @@
     box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.4);
     cursor: pointer;
     transition: 0.3s;
-     svg{
+     img{
       position: absolute;
       width: 24px;
       height: 24px;
       top: 8px;
       z-index: 100;
      }
-    svg.sun{
+    img.sun{
       left: 58px;
       fill: #7e7e7e;
       transition: 0.3s;
     }
-    svg.moon{
+    img.moon{
       left: 8px;
       fill: #fff;
       transition: 0.3s;
@@ -144,5 +145,59 @@
   }
   a{
     text-decoration: none;
+  }
+}
+
+.animated-modal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 400px;
+  min-height: 500px;
+  width: 100%;
+  height: 100%;
+  .box{
+    min-width: min(100%, 400px);
+    height: 500px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    &::before{
+        content: "";
+        width: 400px;
+        min-height: 500px;
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        transform-origin: bottom right;
+        animation: animate 6s linear infinite;
+    }
+    &::after{
+        content: "";
+        min-width: min(100%, 400px);
+        min-height: 500px;
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        transform-origin: bottom right;
+        animation: animate 6s linear infinite;
+        animation-delay: -3s;
+    }
+    .box-inset{
+      position: absolute;
+      z-index: 10;
+      inset: 3px;
+      border-radius: 8px;
+      padding: $space-larger;
+    }
+  }
+}
+
+@keyframes animate {
+  0%{
+      transform: rotate(0deg);
+  }
+  100%{
+      transform: rotate(360deg);
   }
 }
