--- a/src/assets/styles/componentStyles.scss
+++ b/src/assets/styles/componentStyles.scss
@@ -22,14 +22,15 @@
                 transition: all ease-in-out 1s;
                 border-radius: 4px;
               }
+              
         }
-    }
-    .buttons{
+      }
+      .buttons{
         display: flex;
         justify-content: space-between;
         gap: $space-medium;
         padding: $space-small;
-    }
+      }
 
 }
 
@@ -55,6 +56,9 @@
         vertical-align: top;
         border: $border-syan;
       }
+      // .today{
+      //   background: $gradientSyan;
+      // }
     }
   }
   
@@ -104,7 +108,7 @@
       transition: 0.3s;
     }
     &:active::after{
-      width: 52x;
+      width: 52px;
     }
   }
   input{
@@ -139,12 +143,15 @@
   padding: $space-medium;
   border-radius: $space-small;
   .item{
-    padding: 4px $space-medium;
-    display: block;
+    padding: $space-smallest $space-small;
     border-radius: $space-smallest;
-  }
-  a{
-    text-decoration: none;
+      display: flex;
+      text-decoration: none;
+      align-items:center;
+      column-gap: $space-smallest;
+      svg{
+        color: $syan;
+      }
   }
 }
 
@@ -153,9 +160,8 @@
   justify-content: center;
   align-items: center;
   min-width: 400px;
-  min-height: 500px;
+  min-height: fit-content;
   width: 100%;
-  height: 100%;
   .box{
     min-width: min(100%, 400px);
     height: 500px;
@@ -192,6 +198,27 @@
     }
   }
 }
+.signupContainer{
+  height: 600px;
+  .box{
+    height: 600px;
+  }
+
+}
+
+.google-account-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: $space-small $space-medium;
+  border-radius: $space-small;
+  column-gap: $space-small;
+  margin:  $space-large auto 0;
+  svg{
+    color: $syan;
+    width: 28px;
+  }
+}
 
 @keyframes animate {
   0%{
@@ -199,5 +226,46 @@
   }
   100%{
       transform: rotate(360deg);
+  }
+}
+
+.input-container{
+  margin-bottom: $space-larger;
+  label{
+    display: block;
+    margin-bottom: $space-small;
+    font-weight: 600;
+    text-align: start;
+    padding: 0 $space-small;
+  }
+  input{
+    padding: $space-medium;
+    width: 100%;
+    border-radius: $space-small;
+    outline: none;
+    border: 1px solid $syan;
+    .errorMessage{
+      text-align: end;
+      padding-top: 0;
+    }
+  }
+
+}
+
+.errorMessage{
+  display: block;
+  padding: $space-large 0;
+  color: $red;
+  margin-top: $space-smallest;
+  font-size: $font-small;
+}
+
+.form{
+  text-align: center;
+  .linkButton{
+    color: $syan;
+    display: block;
+    padding-top: $space-large;
+    // text-align: end;
   }
 }
