--- a/src/assets/styles/mainStyles.scss
+++ b/src/assets/styles/mainStyles.scss
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  // font-family: 'Roboto', sans-serif;
+  font-size: $font-medium;
+  font-family: 'Roboto', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -132,6 +133,9 @@ body {
     }
     .nextPrev-button{
       padding: $space-small;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .hasBigPadding{
       padding: $space-medium $space-largest;
@@ -146,6 +150,9 @@ body {
   gap: $space-largest;
   h2{
       text-align: center;
+  }
+  h3{
+    margin: $space-small;
   }
   button{
     background: transparent;
@@ -218,23 +225,6 @@ body {
           }
       }
     } 
-
-    .day-plan{
-      .section-item{
-  
-      }
-      .todo-list{
-  
-      }
-      .additional-section{
-          .aphorism{
-              background: $gradientSyanLight;
-          }
-          .finance{
-            
-          }
-        }
-      }
   .nextPrev-button{
     background: $gradientSyanLight;
   }
@@ -258,7 +248,7 @@ body {
     color: $text-color;
   }
   .input-container{
-    input{
+    input, select{
       background: $primary-color;
       &:focus{
         background: $secondary-color
@@ -333,22 +323,6 @@ body {
         }
     }
   }
-  .day-plan{
-    .section-item{
-
-    }
-    .todo-list{
-
-    }
-    .additional-section{
-        .aphorism{
-            background: $gradientSyan;
-        }
-        .finance{
-
-        }
-    }
-  }
   .nextPrev-button{
     background: $gradientSyan;
   }
@@ -369,7 +343,7 @@ body {
     }
   }
   .input-container{
-    input{
+    input, select{
       color: $text-color-dark;
       background: $secondary-color-dark;
       &:focus{
