--- a/src/assets/styles/variables/variables.scss
+++ b/src/assets/styles/variables/variables.scss
@@ -9,18 +9,23 @@ $text-color-hover: rgb(204, 209, 209);
 $text-color-dark: rgb(240, 240, 240);
 $text-color-dar-hover: rgb(204, 209, 209);
 $syan: rgb(15, 156, 161);
-$green: rgb(88, 214, 141);
+$syanGlass: rgb(15, 156, 161, 0.2);
+$green: rgb(88, 214, 141, 0.2);
 $red: rgb(231, 76, 60);
+$redGlass: rgb(231, 76, 60, 0.2);
 $yellow: rgb(244, 208, 63);
+$yellowGlass: rgb(244, 208, 63, 0.2);
 $greyLight: #ebebeb;
 $gradientSyan: linear-gradient(180deg, rgb(7, 9, 24) 10%, rgb(15, 156, 161) 100%, rgb(88, 214, 141) 40%);
 $gradientSyanLight: linear-gradient(0deg, rgba(18, 184, 134, 0.6) 5%, rgba(77, 171, 247, 0.28) 95%);;
 $gradientGrey: linear-gradient(180deg, rgba(139,139,156,1) 0%, rgba(198,198,207,1) 35%, rgba(196,227,233,1) 100%);
 $gradientYellow: linear-gradient(180deg, #ffcc89, #d8860b);
 $borderSyan: 1px solid rgb(15, 156, 161);
+
+//screen size
 $max-width-small: 700px;
 $max-width: 1152px;
-$max-width-large: 2000px;
+$max-width-large: 1500px;
 
 
 //space
