--- a/src/assets/styles/componentStyles.scss
+++ b/src/assets/styles/componentStyles.scss
@@ -1,4 +1,4 @@
-@import "./variables/variables.scss";
+@import "./variables.scss";
 
 .month-container{
     width: 100%;
@@ -21,8 +21,7 @@
                 text-align: center;
                 transition: all ease-in-out 1s;
                 border-radius: 4px;
-              }
-              
+              }    
         }
       }
       .buttons{
