--- a/src/assets/styles/mainStyles.scss
+++ b/src/assets/styles/mainStyles.scss
@@ -1,4 +1,4 @@
-@import "./variables/variables.scss";
+@import "./variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   place-items: center;
-  min-width: 320px;
+  // min-width: 320px;
   // min-height: 100vh;
   // height: 100%;
   #app {
@@ -33,7 +33,9 @@ body {
       margin: 0;
       padding: 0;
       width: 100%;
+      height: 100%;
       .sidebar-container{
+        height: 100%;
         .menu-icon{
           padding: $space-medium $space-small;
           svg{
@@ -45,7 +47,7 @@ body {
           padding: 0;
         }
         .sidebar {
-          min-height: 100%;
+          height: 100%;
           min-height: 100vh;
           width: $sidebar-width;
           padding: $space-medium;
