--- a/src/assets/styles/viewsStyles.scss
+++ b/src/assets/styles/viewsStyles.scss
@@ -61,15 +61,20 @@ button{
     max-width: $max-width-large;
     .content{
         display: grid;
-        grid-template-columns: repeat(7, 1fr);
+        grid-template-columns: repeat(7, minmax(170px, 1fr));
         .day{
             border: $border-syan;
-            padding: $space-small;
+            min-height: 500px;
             .header{
                 display: block;
                 text-align: center;
+                background-color: $syanGlass;
+                border-bottom: $border-syan;
                 @include text-scheme-medium;
-
+                
+            }
+            .taskContainer{
+                padding: $space-small;                
             }
             .plan{
                 min-height: 700px;
@@ -143,7 +148,7 @@ button{
     max-width: $max-width;
     gap: $space-large;
     .section-item{
-        border: $borderSyan;
+        border: $border-syan;
         border-radius: $space-small;
         padding: $space-larger;
     }
@@ -158,7 +163,7 @@ button{
         .buttonContainer{
             display: flex;
             justify-content: flex-end;
-            margin-bottom: $space-large;
+            margin-top: $space-large;
 
         }
         form{
@@ -191,7 +196,6 @@ button{
     .additional-section{
         width: 400px;
         .calendar{
-            background: $gradientSyan;
             min-height: 120px;
             display: flex;
             justify-content: center;
@@ -215,11 +219,11 @@ button{
 
 .help-view{
     width: 100%;
-    max-width: $max-width;
+    max-width: calc($max-width - 100px);
     text-align: center;
     .grid-container{
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
         grid-gap: $space-largest;
         column-gap: 60px;
 
@@ -243,7 +247,7 @@ button{
             .answer{
                 justify-content: flex-end;
                 span{
-                    width: 500px;
+                    width: 400px;
                     border-bottom-right-radius: 0;
                     color: $text-color;
                 }
